@@ -1,3 +1,8 @@
+Mon May 25 11:27:14 2015  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* win32/win32.c (setup_overlapped): seek to the file end only when
+	  writing (mode:a), not reading (mode:a+, read).
+
 Mon May 25 00:27:37 2015  Benoit Daloze  <eregontp@gmail.com>
 
 	* numeric.c (Numeric#negative?): [DOC] Fix call-seq.
